--- a/Src/iFramework.Plugins/IFramework.Autofac/IFramework.Autofac.csproj
+++ b/Src/iFramework.Plugins/IFramework.Autofac/IFramework.Autofac.csproj
@@ -30,9 +30,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=4.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Autofac.4.0.0\lib\net451\Autofac.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Autofac, Version=4.6.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Autofac.4.6.1\lib\net45\Autofac.dll</HintPath>
+    </Reference>
+    <Reference Include="Autofac.Configuration, Version=4.0.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Autofac.Configuration.4.0.1\lib\net45\Autofac.Configuration.dll</HintPath>
     </Reference>
     <Reference Include="Autofac.Extras.DynamicProxy, Version=4.2.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Autofac.Extras.DynamicProxy.4.2.1\lib\net45\Autofac.Extras.DynamicProxy.dll</HintPath>
@@ -40,9 +42,49 @@
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Castle.Core.4.0.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Extensions.Configuration, Version=1.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Extensions.Configuration.1.0.0\lib\netstandard1.1\Microsoft.Extensions.Configuration.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Extensions.Configuration.Abstractions, Version=1.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Extensions.Configuration.Abstractions.1.0.0\lib\netstandard1.0\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Extensions.Configuration.FileExtensions, Version=1.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Extensions.Configuration.FileExtensions.1.0.0\lib\net451\Microsoft.Extensions.Configuration.FileExtensions.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Extensions.Configuration.Json, Version=1.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Extensions.Configuration.Json.1.0.0\lib\net451\Microsoft.Extensions.Configuration.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Extensions.Configuration.Xml, Version=1.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Extensions.Configuration.Xml.1.0.0\lib\net451\Microsoft.Extensions.Configuration.Xml.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Extensions.FileProviders.Abstractions, Version=1.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Extensions.FileProviders.Abstractions.1.0.0\lib\netstandard1.0\Microsoft.Extensions.FileProviders.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Extensions.FileProviders.Physical, Version=1.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Extensions.FileProviders.Physical.1.0.0\lib\net451\Microsoft.Extensions.FileProviders.Physical.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Extensions.FileSystemGlobbing, Version=1.1.1.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Extensions.FileSystemGlobbing.1.1.1\lib\net45\Microsoft.Extensions.FileSystemGlobbing.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Extensions.Primitives">
+      <HintPath>..\..\packages\Microsoft.Extensions.Primitives.1.1.1\lib\netstandard1.0\Microsoft.Extensions.Primitives.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Runtime.CompilerServices.Unsafe.4.3.0\lib\netstandard1.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.InteropServices.RuntimeInformation, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Runtime.InteropServices.RuntimeInformation.4.3.0\lib\net45\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,37 +93,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Autofac.Configuration.Core\ConfigurationModule.cs" />
-    <Compile Include="Autofac.Configuration.Elements\ComponentElement.cs" />
-    <Compile Include="Autofac.Configuration.Elements\ComponentElementCollection.cs" />
-    <Compile Include="Autofac.Configuration.Elements\ConfigurationElementCollection.cs" />
-    <Compile Include="Autofac.Configuration.Elements\DictionaryElementCollection.cs" />
-    <Compile Include="Autofac.Configuration.Elements\FileElement.cs" />
-    <Compile Include="Autofac.Configuration.Elements\FileElementCollection.cs" />
-    <Compile Include="Autofac.Configuration.Elements\ListElementCollection.cs" />
-    <Compile Include="Autofac.Configuration.Elements\ListItemElement.cs" />
-    <Compile Include="Autofac.Configuration.Elements\MetadataElement.cs" />
-    <Compile Include="Autofac.Configuration.Elements\MetadataElementCollection.cs" />
-    <Compile Include="Autofac.Configuration.Elements\ModuleElement.cs" />
-    <Compile Include="Autofac.Configuration.Elements\ModuleElementCollection.cs" />
-    <Compile Include="Autofac.Configuration.Elements\NamedConfigurationElementCollection.cs" />
-    <Compile Include="Autofac.Configuration.Elements\ParameterElement.cs" />
-    <Compile Include="Autofac.Configuration.Elements\ParameterElementCollection.cs" />
-    <Compile Include="Autofac.Configuration.Elements\PropertyElement.cs" />
-    <Compile Include="Autofac.Configuration.Elements\PropertyElementCollection.cs" />
-    <Compile Include="Autofac.Configuration.Elements\ServiceElement.cs" />
-    <Compile Include="Autofac.Configuration.Elements\ServiceElementCollection.cs" />
-    <Compile Include="Autofac.Configuration.Util\Enforce.cs" />
-    <Compile Include="Autofac.Configuration.Util\ReflectionExtensions.cs" />
-    <Compile Include="Autofac.Configuration.Util\TypeManipulation.cs" />
-    <Compile Include="Autofac.Configuration\AppSettingsModule.cs" />
-    <Compile Include="Autofac.Configuration\AssemblyNameConverter.cs" />
-    <Compile Include="Autofac.Configuration\ConfigurationRegistrar.cs" />
-    <Compile Include="Autofac.Configuration\ConfigurationSettingsReader.cs" />
-    <Compile Include="Autofac.Configuration\ConfigurationSettingsReaderResources.cs" />
-    <Compile Include="Autofac.Configuration\IConfigurationRegistrar.cs" />
-    <Compile Include="Autofac.Configuration\SectionHandler.cs" />
-    <Compile Include="Autofac.Configuration\XmlFileReader.cs" />
     <Compile Include="AutofacContainerExtension.cs" />
     <Compile Include="AutofacLogInterceptor.cs" />
     <Compile Include="Config\Configuration.cs" />
@@ -100,9 +111,6 @@
     <None Include="IFramework.Autofac.Mvc.1.0.0.nupkg" />
     <None Include="IFramework.Autofac.nuspec" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Autofac.Configuration\ConfigurationSettingsReaderResources.resources" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
